Fix title, button alignment

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -4,6 +4,7 @@
 
 .top-bar {
   display: flex;
+  align-items: baseline;
 }
 
 .space {
